arm64: dts: hanoip: Enable ULPS when display is idle This saves power when there is a static image on the display.
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>
Signed-off-by: Dark-Matter7232 <kerneldeveloper7232@gmail.com>

--- a/arch/arm64/boot/dts/qcom/hanoi-panel.dtsi
+++ b/arch/arm64/boot/dts/qcom/hanoi-panel.dtsi
@@ -126,6 +126,7 @@
 	qcom,mdss-dsi-panel-peak-brightness = <4500000>;
 	qcom,mdss-dsi-panel-blackness-level = <3000>;
 	qcom,mdss-dsi-reset-sequence = <1 4>, <0 1>, <1 12>;
+	qcom,ulps-enabled;
 	qcom,mdss-dsi-display-timings {
 		timing@0{
 			qcom,mdss-dsi-panel-phy-timings =
@@ -155,6 +156,7 @@
 
 	qcom,mdss-dsi-t-clk-post = <0x0e>;
 	qcom,mdss-dsi-t-clk-pre = <0x31>;
+	qcom,ulps-enabled;
 	qcom,mdss-dsi-display-timings {
 		timing@0{
 			qcom,mdss-dsi-panel-phy-timings = [00 2a 0b 0b 28 26 0b
